Refactor and enhance infrastructure and services
- Added `AddInfrastuctreDependcies` in `Program.cs` to register repositories and unit of work.
- Refactored `ModuleInfrastuctreDependcies` to a static class with dependency registration.
- Implemented `MainRepoistory` and `UnitOfWork` for repository and transaction management.
- Introduced `IMainRepoistory` and `IUnitOfWork` interfaces for abstraction.
- Added DTOs for `Author`, `Book`, `Category`, `Fine`, `Loan`, `Publisher`, `Review`, and `User` with validation.
- Created service interfaces for business logic across entities.
- Introduced `IAccountService` for authentication methods.
- Updated project structure to improve organization and maintainability.

--- a/LibraryManagmentSystem.Services/LibraryManagmentSystem.Services.csproj
+++ b/LibraryManagmentSystem.Services/LibraryManagmentSystem.Services.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\LibraryManagmentSystem.Infrasturcture\LibraryManagmentSystem.Infrasturcture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
 </Project>
