Integrate AutoMapper and enhance service layer
- Added project reference to `LibraryManagmentSystem.Services` in API project.
- Registered `AddServicesDependcies()` in `Program.cs` for DI.
- Enhanced entity models with navigation properties for relationships.
- Added AutoMapper and configured mappings in `MappingProfile.cs`.
- Introduced DTOs for API communication and improved abstraction.
- Implemented `BookService` with CRUD operations and AutoMapper integration.
- Refactored `IAccountService` to use DTOs for better maintainability.
- Added `AutoMapper-Usage-Guide.md` for documentation and best practices.
- Improved project structure, maintainability, and scalability.

--- a/LibraryManagmentSystem.Api/LibraryManagmentSystem.Api.csproj
+++ b/LibraryManagmentSystem.Api/LibraryManagmentSystem.Api.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LibraryManagmentSystem.Core\LibraryManagmentSystem.Core.csproj" />
+    <ProjectReference Include="..\LibraryManagmentSystem.Services\LibraryManagmentSystem.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
