Refactor and enhance user management
- Organized dependency injection in Program.cs with #region.
- Added Features and Mapping folders in Core project.
- Introduced BCrypt.Net-Next for password hashing in Services.
- Refactored validation logic across multiple service files.
- Changed IUserService methods to return User entities.
- Implemented UserService with CRUD operations and validation.
- Improved code organization and validation logic.

--- a/LibraryManagmentSystem.Core/LibraryManagmentSystem.Core.csproj
+++ b/LibraryManagmentSystem.Core/LibraryManagmentSystem.Core.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\LibraryManagmentSystem.Services\LibraryManagmentSystem.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+
 </Project>
